--- a/dracoHatch.css
+++ b/dracoHatch.css
@@ -12,7 +12,7 @@ svg {
   border: 2px solid red;
   margin-left:100px;
 }
-path {
+.eggPath {
    stroke:black;
    stroke-width:.25;
    opacity:.5;
@@ -51,7 +51,13 @@ path {
 #dracoDot {
   fill:white;
 }
-.test {fill:yellow;}
+
 #flame {
   opacity:0;
 }
+p {
+  color: #aaa;
+  text-align: center;
+  margin: 2em 0;
+}
+#motionPath {opacity:0}
